--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,25 @@
   box-sizing: border-box;
 }
 
-/* 2. Remove default margin */
+/* Reset default margins and padding */
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
